Adding google maps api, geocode converting, distance and time of delivery

--- a/README
+++ b/README
@@ -1,8 +1,10 @@
-Web aplication in Django to To handle transport.
+Web aplication in Django to To handle transport in small company.
 It is used to determine deliveries and preview delivery locations on the map.
 Ultimately, the application should reduce delivery costs by visually suggesting a combination of shipping.
 
 
-When order is added application changes delivery location to geocode and shows destination as a target (marker) on the map.
+When order is added address is converted to geocode (lat, long) by using Google API.
+We can see all 'new' deliveries on main page and go to the detail view were a single delivery is shown on map.
+
 
 
