--- a/README
+++ b/README
@@ -1,13 +1,15 @@
-Web aplication in Django To handle transport in small company.
+# TransportApp
+* Web aplication written in django to handle transport in a small company.
+
+## General info
 It is used to determine deliveries and preview delivery locations on the map.
 Ultimately, the application should reduce delivery costs by visually suggesting a combination of shipping.
 
-
+## How it works?
 When order is added address is converted to geocode (lat, long) by using Google API.
 We can see all 'new' deliveries on main page and see their "points" on the map. Once an order is clicked we are redirected 
 to detail order view where we can change status of the transport, from this point the order can be deleted or modified. 
-
 Orders can be filtered by name of client. phone number etc.
 
-There are 54 tests for the app. 
-Database has been made in postgreSQL.
+* There are 54 tests for the app. 
+* Database has been made in postgreSQL.
