--- a/README
+++ b/README
@@ -1,10 +1,22 @@
-Web aplication in Django to To handle transport in small company.
+# TransportApp
+
+TransportApp is a web aplication written in python with Django framework.
+
+## The aim of aplication
+
 It is used to determine deliveries and preview delivery locations on the map.
 Ultimately, the application should reduce delivery costs by visually suggesting a combination of shipping.
 
 
+## How it works?
 When order is added address is converted to geocode (lat, long) by using Google API.
 We can see all 'new' deliveries on main page and go to the detail view were a single delivery is shown on map.
 
+## Where you can see it?
+Aplication is available on: https://smarttransport.herokuapp.com/  
+Login: test
+Password: test
 
-
+## Technology
+Aplication has 54 tests.
+Database has been made in postgreSQL
